kubernetes/kube-system/cilium/hubble-ui-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    external-dns.alpha.kubernetes.io/target: "10.0.6.151"
spec:
  hostnames:
    - hubble.eviljungle.com
  parentRefs:
    - name: tailscale-gateway
      namespace: kube-system
      sectionName: https
    - name: internal
      namespace: kube-system
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
